# pyprismatictest

./: .coveragerc  .gitignore  README.md  default_env_setup_for_slurm_jobs.sh  drac_dns_domain_names  load_drac_modules.sh  pyproject.toml  setup.py
.github/workflows/: test_library.yml
examples/: test_cpu_version_of_pyprismatic_for_py312.sh  test_gpu_version_of_pyprismatic_for_py312.sh
pyprismatictest/: __init__.py  _params.py  _sample.py  _sim.py  version.py
slurm_jobs/: test_cpu_version_of_pyprismatic_for_py312.sh  test_gpu_version_of_pyprismatic_for_py312.sh
tests/: test_root.py
